...
        android:textSize="20sp"
        android:text="@string/five_rating_description" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/difficulty_radio_group"
        android:layout_alignTop="@+id/difficulty_radio_group"
        android:layout_marginStart="-103dp"
        android:layout_marginTop="31dp"
        android:text="@string/difficulty"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/taste_radio_group"
        android:layout_alignTop="@+id/taste_radio_group"
        android:layout_marginStart="-68dp"
        android:layout_marginTop="31dp"
        android:text="@string/taste"
        android:textColor="@color/black"
        android:textSize="25sp" />
...
            android:drawableBottom="@android:drawable/btn_radio"
            android:gravity="center"
            android:text="1"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/difficulty_radio_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableBottom="@android:drawable/btn_radio"
            android:gravity="center"
            android:text="2"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/difficulty_radio_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableBottom="@android:drawable/btn_radio"
            android:gravity="center"
...
            android:drawableBottom="@android:drawable/btn_radio"
            android:gravity="center"
            android:textSize="20sp"
            android:text="1" />

        <RadioButton
            android:id="@+id/taste_radio_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableBottom="@android:drawable/btn_radio"
            android:gravity="center"
...
            android:gravity="center"
            android:textSize="20sp"
            android:text="5" />
    </RadioGroup>

    <Button
        android:id="@+id/submit_rating"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:background="@drawable/round_button"
...
