...
            android:singleLine="true"
            android:text="@string/recipe_card_name_placeholder"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/estimated_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/recipe_name"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
...

        android:background="@color/header_footer_background"
        android:gravity="center"
        android:theme="@style/spinnerTheme" />

    <Button
        android:id="@+id/start_cooking"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_below="@+id/ingredients_list"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_button"
...
