...
    android:layout_height="match_parent"
    tools:context=".presentation.ViewRecipesFragment">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recipe_list_view"
        android:drawSelectorOnTop="true"/>
        <!-- android:drawSelectorOnTop="true"   makes a ripple effect when an item is clicked-->
</FrameLayout>


